# trader-ai

./: .dockerignore  .env.example  .env.railway.example  .gitignore  .railwayignore  BUG_FIX_SUMMARY.md  CASH_FLOOR_BUG_FIX_SUMMARY.md  CIRCUIT-BREAKER-IMPLEMENTATION-SUMMARY.md  CIRCUIT-BREAKER-SAFETY-FIX-COMPLETE.md  CIRCUIT-BREAKER-VISUAL-FLOW.txt  CLAUDE.md  COMMIT_MESSAGE.txt  COMMIT_MSG.txt  CORS-SECURITY-FIX-SUMMARY.md  DAILY_LOSS_LIMIT_FLOW.txt  DAILY_LOSS_LIMIT_IMPLEMENTATION.md  DAILY_LOSS_LIMIT_INDEX.md  DAILY_LOSS_LIMIT_QUICK_REFERENCE.md  DATA_LEAKAGE_FIX_SUMMARY.md  DATA_LEAKAGE_VISUAL_COMPARISON.md  Dockerfile  FINAL_TRM_STATUS_REPORT.md  FIXES-APPLIED-REPORT.md  FIXES-VERIFIED.md  GATE-VALIDATION-FLOW.md  GATE-VALIDATION-IMPLEMENTATION.md  GATE-VALIDATION-QUICK-REFERENCE.md  IMPLEMENTATION_COMPLETE.txt  INTEGRATION-COMPLETE-SUMMARY.md  ISS-017-AUDIT-REPORT.md  ISS-017-FIX-ai_alert_system.patch  ISS-017-SUMMARY.md  ISS-020-IMPLEMENTATION-SUMMARY.md  JWT_AUTH_QUICK_START.md  KILL-SWITCH-CODE-CHANGES.md  KILL-SWITCH-IMPLEMENTATION-SUMMARY.md  KILL-SWITCH-INDEX.md  KILL-SWITCH-QUICK-REFERENCE.md  KILL-SWITCH-SAFETY-FLOW.txt  LOOKAHEAD_BIAS_FIX.md  (+76 more)
.claude/: settings.local.json
archive/: orginal convo for inspiration.txt
benchmark-results/: benchmark-report-2025-09-15T01-32-08-757Z.json  benchmark-summary-2025-09-15T01-32-08-757Z.csv  system-metrics-2025-09-15T01-32-08-757Z.json
checkpoints/: final_metrics.json  training_checkpoint.pkl  training_history.json
config/: config.json  feature_flags.json  kill_switch_config.json  moo_config.json  trm_config.json  (+4 more)
(+1131 files in other folders)
