[project]
name = "trader-ai"
version = "1.0.0"
description = "Gary x Taleb Trading System"
requires-python = ">=3.11"
dependencies = [
    "astroid>=2.15.0,<3.0.0",
    "pylint>=2.17.0,<3.0.0",
    "pathspec>=0.11.0,<1.0.0",
    "toml>=0.10.0,<1.0.0",
    "semgrep>=1.134.0,<2.0.0",
    "pip-audit>=2.9.0,<3.0.0",
    "bandit>=1.8.0,<2.0.0",
    "safety>=3.6.0,<4.0.0",
    "detect-secrets>=1.5.0,<2.0.0",
    "ruff>=0.13.0,<1.0.0",
    "mypy>=1.17.0,<2.0.0",
    "radon>=5.1.0,<6.0.0",
    "black>=23.12.1,<24.0.0",
    "pyyaml>=6.0,<7.0",
    "dataclasses-json>=0.5.9,<1.0.0",
    "typing-extensions>=4.7.0,<5.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "pytest-timeout>=2.1.0,<3.0.0",
    "pytest-json-report>=1.5.0,<2.0.0",
    "memory-profiler>=0.61.0,<1.0.0",
    "psutil>=6.1.0,<8.0.0",
    "requests>=2.31.0,<3.0.0",
    "urllib3>=2.0.0,<3.0.0",
    "jsonschema>=4.19.0,<5.0.0",
    "watchdog>=3.0.0,<4.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "alpaca-py>=0.26.0,<1.0.0",
    "yfinance>=0.2.18,<1.0.0",
    "pytz>=2023.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"